[Portal.Theme] CSS fix in plone navigation and content-area alignment ; Updated workspace font theme colors

--- a/portal.theme/trunk/portal/theme/static/css/reset.css
+++ b/portal.theme/trunk/portal/theme/static/css/reset.css
@@ -1704,9 +1704,6 @@ body.template-workspace.section-bungeni-workspace #portal-column-content div#wha
 .template-web_pages #context_workflow,
 .template-privateshell_folder #context_workflow {
     display: none;
-} 
-.site-plone.template-workspace div#visual-table-wrapper {
-    margin: 0em 0 0 1.8em !important;
 }
 
 .template-portal.site-plone div#portal-globalnav ul.level1 {
